--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -11,6 +11,9 @@ jobs:
     name: Backport Action
     steps:
       - name: Backport
-        uses: sqren/backport-github-action@1.0.0
+        id: backport
+        uses: sqren/backport-github-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Get the output time
+        run: echo "The time was ${{ steps.backport.outputs.time }}"
