--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -11,6 +11,6 @@ jobs:
     name: Backport Action
     steps:
       - name: Backport
-        uses: sqren/backport-github-action@v1
+        uses: sqren/backport-github-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
