--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -14,8 +14,7 @@ jobs:
         with:
           repository: 'sqren/backport-github-action'
           path: 'backport-github-action'
-        run: yarn
-        run: yarn tsc
-        uses: ./backport-github-action/action.yml
+      - run: cd backport-github-action && yarn && yarn tsc
+      - uses: ./backport-github-action/action.yml
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
