--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -10,7 +10,8 @@ jobs:
     name: Backport Action
     runs-on: ubuntu-latest
     steps:
-      - uses: sqren/backport-github-action@v1
+      - name: Backport
+        uses: sqren/backport-github-action@v1
         with:
           # Required
           # Token to authenticate requests. Can be left untouched
