--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -1,38 +1,38 @@
 name: Backport
 on:
+  workflow_dispatch:
   pull_request_target:
-    types: [opened, closed, labeled, unlabeled, synchronize]
+    branches:
+      - master
+    types:
+      - labeled
+      - closed
 
 jobs:
   backport:
-    name: Backport Action
+    name: Backport PR
+    if: |
+      github.event.pull_request.merged == true
+      && contains(github.event.pull_request.labels.*.name, 'auto-backport')
+      && (
+        (github.event.action == 'labeled' && github.event.label.name == 'auto-backport')
+        || (github.event.action == 'closed')
+      )
     runs-on: ubuntu-latest
     steps:
-      - name: Backport
-        uses: sqren/backport-github-action@v1
+      - name: Checkout Actions
+        uses: actions/checkout@v2
         with:
-          # Required
-          # Token to authenticate requests
-          access_token: ${{ secrets.GITHUB_TOKEN }}
+          repository: 'elastic/kibana-github-actions'
+          ref: main
+          path: ./actions
 
-          # Required
-          # Backport PR by adding a label
-          # Example: PRs labeled with "backport-to-staging" will be backported to "staging"
-          backport_label_pattern: '^backport-to-(.*)$'
+      - name: Install Actions
+        run: npm install --production --prefix ./actions
 
-          # Optional
-          # Title for the backport PR
-          # Example: [branch-a] My commit msg
-          # pr_title: '[{targetBranch}] {commitMessages}'
-
-          # Optional
-          # Comma separated list of labels that will be added to the backport PR.
-          # target_pr_labels: 'backport'
-
-          # Optional
-          # If no labels match the `backport_label_pattern` the backport check will fail. To bypass this for a single PR you can add a label to indicate the PR should not be backported
-          # skip_backport_check_label: 'backport:skip'
-
-          # Optional
-          # If no labels match the `backport_label_pattern` the backport check will fail. Enabling this will bypass the check for all PRs
-          # skip_backport_check: false
+      - name: Run Backport
+        uses: ./actions/backport
+        with:
+          github_token: ${{secrets.ACCESS_TOKEN}}
+          commit_user: Soren Louv
+          commit_email: foobar@users.noreply.github.com
