--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -32,6 +32,8 @@ jobs:
         uses: ./backport-github-action
         with:
           github_token: ${{secrets.GITHUB_TOKEN}}
+          commit_user: Backport Bot
+          commit_email: backportbot@users.noreply.github.com          
 
       - name: Show log in case we failed
         run: cat /home/runner/.backport/backport.log
