--- a/.backportrc.json
+++ b/.backportrc.json
@@ -1,14 +1,12 @@
 {
   "upstream": "backport-org/backport-demo",
   "targetBranchChoices": [
-    { "name": "master", "checked": true },
-    { "name": "7.x", "checked": true },
-    "7.8"
+    "master",
+    "production",
+    "staging"
   ],
   "targetPRLabels": ["backport"],
   "branchLabelMapping": {
-    "^v8.0.0$": "master",
-    "^v7.9.0$": "7.x",
-    "^v(\\d+).(\\d+).\\d+$": "$1.$2"
+    "^backport-to-(.+)$": "$1"
   }
 }
