--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Backport Action
-        uses: sqren/backport-github-action@7.3.1
+        uses: sqren/backport-github-action@v7.3.1        
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
