Fix debug logging

--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -24,4 +24,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Backport log
-        run: cat ~/.backport/backport.log
+        run: cat ~/.backport/backport.debug.log
