--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -1,10 +1,7 @@
 on:
   pull_request_target:
-    branches:
-      - master
-    types:
-      - labeled
-      - closed
+    branches: ["master"]
+    types: ["labeled", "closed"]
 
 jobs:
   backport:
@@ -23,5 +20,10 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Backport log
-        run: cat ~/.backport/backport.debug.log
+      - name: Info log
+        if: ${{ success() }}
+        run: cat /home/runner/.backport/backport.info.log
+        
+      - name: Debug log
+        if: ${{ failure() }}
+        run: cat /home/runner/.backport/backport.debug.log     
