--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -15,9 +15,9 @@ jobs:
 
       - name: Info log
         if: ${{ success() }}
-        run: cat /home/runner/.backport/backport.info.log
+        run: cat /home/runner/.backport/backport.info.log 2>/dev/null
         
       - name: Debug log
         if: ${{ failure() }}
-        run: cat /home/runner/.backport/backport.debug.log        
+        run: cat /home/runner/.backport/backport.debug.log 2>/dev/null         
           
