--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -6,6 +6,7 @@ jobs:
   backport:
     name: Backport PR
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
     steps:
       - name: Backport Action
         uses: sqren/backport-github-action@debug-context
