Add auto-merge to backport config

--- a/.backportrc.json
+++ b/.backportrc.json
@@ -8,5 +8,7 @@
   "targetPRLabels": ["backport"],
   "branchLabelMapping": {
     "^backport-to-(.+)$": "$1"
-  }
+  },
+  "autoMerge": true,
+  "autoMergeMethod": "squash"
 }
