Update .backportrc.json (#153)
(cherry picked from commit 57f4a305ca87fb50beda3d2c61d38f9c02b9b0a1)

# Conflicts:
#	.backportrc.json

--- a/.backportrc.json
+++ b/.backportrc.json
@@ -1,10 +1,6 @@
 {
   "upstream": "backport-org/backport-demo",
-  "targetBranchChoices": [
-    "master",
-    "production",
-    "staging"
-  ],
+  "targetBranchChoices": ["master", "production", "staging"],
   "targetPRLabels": ["backport"],
   "branchLabelMapping": {
     "^backport-to-(.+)$": "$1"
