Always backport to production

--- a/.backportrc.json
+++ b/.backportrc.json
@@ -1,5 +1,8 @@
 {
   "upstream": "backport-org/backport-demo",
+  "targetBranches": {
+    "production"
+  },
   "targetBranchChoices": [
     "master",
     "production",
