Use beta version of gh action

--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -6,15 +6,9 @@ jobs:
   backport:
     name: Backport PR
     runs-on: ubuntu-latest
-    if: |
-      github.event.pull_request.merged == true
-      && (
-        (github.event.action == 'labeled' && github.event.label.name == 'auto-backport')
-        || (github.event.action == 'closed')
-      )
     steps:
       - name: Backport Action
-        uses: sqren/backport-github-action@main
+        uses: sqren/backport-github-action@beta
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
