--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -8,9 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Backport Action
-        uses: sqren/backport-github-action@@main
+        uses: sqren/backport-github-action@main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          auto_backport_label_prefix: auto-backport-to-
 
       - name: Info log
         if: ${{ success() }}
